[tool.poetry]
name = "unitsafe"
version = "0.1.0"
readme = "README.md"
license = "MIT"
documentation = "https://unitsafe.jamesbayley.io"
repository = "https://github.com/jamesbayley/unitsafe.git"
authors = ["James S. Bayley <https://www.linkedin.com/in/jsbayley>"]
description = "A friendly way to handle engineering units in Python."
packages = [{ include = "unitsafe" }]
exclude = ["*_test.py"]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.2"

[tool.ruff]
indent-width = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"